--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -1,8 +1,465 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+/*Fonts "Lato" */
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+/*VARIABLES*/
+
+:root {
+  --color-negro  : #010003;
+  --color-gris   : #d8cfd4;
+  --color-header : #575355;
+  --color-grisos : #222121;
+  --color-rojo   : #c60921;
+  --color-rosa   : #af1236;
+  --color-violeta: #631224;
+  --fuente       : 'Lato';
 }
 
-a {
-  color: #00B7FF;
+/* GENERALES */
+* {
+  box-sizing: border-box;
+  margin    : 0;
+}
+
+body {
+  background-color: var(--color-grisos);
+  color           : var(--color-gris);
+  font-family     : var(--fuente);
+  position        : relative;
+
+}
+
+/* HEADER*/
+
+header {
+  top: 0;
+  width: 100%;
+  position: fixed;
+  box-shadow: 0px 0px 5px rgb(0 0 0 / 60%);
+  z-index: 999;
+  padding: 0px 0;
+  background-color: var(--color-gris);
+}
+
+
+header .header-container {
+  max-width      : 1140px;
+  justify-content: center;
+  display        : fixed;
+}
+
+.conteiner-bienvenida {
+  margin-top: 140px;
+}
+
+/* NAVEGACION */
+
+header nav {
+  display        : flex;
+  flex-wrap      : wrap;
+  justify-content: left;
+}
+
+header nav button.burger {
+
+  color: var(--color-grisos);
+
+}
+
+header nav ul {
+  display       : flex;
+  flex-wrap     : wrap;
+  flex-direction: column;
+  margin-top    : 30px;
+  
+}
+
+header nav ul li a {
+  color          : var(--color-grisos);
+  text-decoration: none;
+  transition     : color .3s ease;
+  font-weight: bold;
+  padding: 5px 0;
+}
+
+.oferta li a {
+  color:var(--color-rojo);
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 5px 0;
+}
+.icons-nav li a i {
+  font-size: 20px;
+  padding: 5px 10px 0 0;
+  
+
+}
+header nav ul li a:hover {
+  text-decoration: none;
+}
+
+.container-logo {
+  display        : flex;
+  flex-wrap      : wrap;
+  width          : 100%;
+  height         : 110px;
+  justify-content: center;
+}
+
+.container-logo a img {
+  height: 110px;
+  width : 200px;
+  z-index: 10;
+}
+
+.carrusel-fotos {
+  display: flex;
+}
+
+/*PUBLICIDAD*/
+
+.p-container {
+  display         : flex;
+  background-color: var(--color-gris);
+  padding         : 15px 0;
+  margin          : 15px 0;
+  align-items     : center;
+  box-shadow: 0px 0px 5px rgb(0 0 0 / 60%);
+}
+
+.p-container article {
+  text-align: center;
+}
+
+.p-container article i {
+  font-size: 35px;
+  color    : var(--color-rosa);
+  padding  : 0 0 20px 0;
+}
+
+.p-container article h4 {
+  font-size  : 10px;
+  color      : var(--color-grisos);
+  font-weight: bold;
+
+}
+
+.p-container article a {
+  color    : var(--color-rosa);
+  font-size: 8px;
+}
+
+.bordes-derechos {
+  border-right: var(--color-rosa) 2px solid;
+}
+
+/* TITULOS */
+.titulo {
+  padding       : 20px 0;
+  text-align    : center;
+  text-transform: uppercase;
+  font-weight   : bold;
+  width         : 100%;
+
+
+}
+
+.lines-effect h2 {
+  display  : inline-block;
+  position : relative;
+  color    : var(--color-gris);
+  font-size: 25px;
+
+
+}
+
+.lines-effect h2::after,
+.lines-effect h2::before {
+  content         : '';
+  position        : absolute;
+  width           : 80px;
+  height          : 3px;
+  background-color: currentColor;
+  top             : 0.6em;
+
+}
+
+.lines-effect h2::before {
+  left: -90px;
+}
+
+.lines-effect h2::after {
+  right: -90px;
+}
+
+/*Producto*/
+
+.productos-conteiner {
+  display      : flex;
+  flex-wrap    : wrap;
+  margin-bottom: 30px;
+
+}
+
+.producto-box {
+  background-color: var(--color-gris);
+  text-align      : center;
+  margin          : 15px;
+  padding         : 10px;
+  color           : var(--color-grisos);
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgb(0 0 0 / 60%);
+
+}
+
+.producto-box h2 {
+  font-size  : 16px;
+  font-weight: bold;
+  margin     : 10px 0;
+  height     : 30px;
+}
+
+.imagen-producto img {
+
+  width: 100%;
+
+}
+
+.envio-promo,
+.descuento {
+  display : flex;
+  position: relative;
+
+}
+
+.envio-promo span {
+  display         : inline-block;
+  background-color: rgb(187, 139, 6);
+  font-size       : 11px;
+  text-transform  : uppercase;
+  margin          : 10px;
+  width           : 50px;
+  height          : 35px;
+  border-radius   : 5px;
+  box-shadow      : 0px 0px 5px rgb(0 0 0 / 30%);
+  top             : -50px;
+  font-weight     : bold;
+  color           : var(--color-gris);
+  position        : absolute;
+
+}
+
+.descuento span {
+  position        : absolute;
+  bottom          : 150px;
+  right           : 3px;
+  height          : 50px;
+  text-align      : center;
+  width           : 50px;
+  box-shadow      : 0px 0px 5px rgb(0 0 0 / 30%);
+  border-radius   : 50%;
+  display         : inline-block;
+  text-transform  : uppercase;
+  font-size       : 13px;
+  background-color: var(--color-rojo);
+  color           : var(--color-gris);
+  font-weight     : bold;
+  padding         : 5px;
+
+
+}
+
+.precio-real {
+  color          : var(--color-grisos);
+  font-size      : 13px;
+  color          : var(--color-grisos);
+  text-decoration: line-through;
+}
+
+.precio-desc {
+  color      : var(--color-rosa);
+  font-weight: bold;
+  font-size  : 16px;
+  padding    : 5px;
+
+}
+
+.button-compra {
+  background    : var(--color-grisos);
+  width         : 100%;
+  text-transform: uppercase;
+  font-size     : 14px;
+  font-weight   : 500;
+  margin-top    : 6px;
+  opacity       : 1;
+  color         : #fff;
+  border        : 0;
+  border-radius : 5px;
+  padding       : 10px;
+  margin-top    : 10px;
+
+}
+
+.resenia {
+  position  : relative;
+  display   : inline-block;
+  text-align: center;
+  padding: 0 0 ;
+  
+}
+
+.resenia p {
+  position : absolute;
+  top      : 50%;
+  left     : 50%;
+  transform: translate(-50%, -50%);
+  z-index  : 2;
+  color    : white;
+  width    : 85%;
+  font-size: 15px;
+
+}
+
+.resenia h2 {
+  position   : absolute;
+  top        : 5%;
+  z-index    : 1;
+  text-align : center;
+  color      : white;
+  font-size  : 2.1em;
+  font-weight: bold;
+  width      : 100%;
+  right      : 1%;
+}
+
+
+.resenia img {
+  filter: brightness(0.4);
+  width : 100%;
+}
+
+/*FOOTER*/
+
+.container-footer {
+  display         : flex;
+  background-color: var(--color-gris);
+  padding         : 20px;
+  flex-wrap       : wrap;
+  margin-top      : 40px;
+
+}
+
+.tienda-online,
+.centro-de-ayuda {
+  color: var(--color-grisos);
+  width: 100%;
+
+}
+
+
+.tienda-online,
+.centro-de-ayuda ul {
+  font-size : 13px;
+  text-align: left;
+
+}
+
+.tienda-online h4,
+.centro-de-ayuda h4,
+.newsletter h4 {
+  text-align    : left;
+  font-weight   : bold;
+  font-size     : 15px;
+  text-transform: uppercase;
+  color         : var(--color-grisos);
+}
+
+
+
+.container-footer ul a li,
+.newsletter p {
+  text-decoration: none;
+  color          : var(--color-grisos);
+  text-emphasis  : none;
+  list-style     : none;
+  padding        : 3px 0;
+  font-size      : 13px;
+
+}
+
+ul {
+  padding: 0;
+}
+
+.newsletter form {
+  background-color: #fff;
+  border          : 1px solid var(--color-gris);
+  border-radius   : 5px;
+  padding         : 5px 0;
+  display         : flex;
+  flex-wrap       : wrap;
+  justify-content : space-between;
+}
+
+.newsletter form input {
+  background-color: none;
+  border          : none;
+  border-right    : 2px solid var(--color-gris);
+  padding         : 0px 10px;
+  width           : 50%;
+  flex-grow       : 1;
+}
+
+.newsletter form button {
+  background: none;
+  border    : none;
+  color     : var(--color-grisos);
+  margin    : 0 8px;
+}
+
+.redes-sociales {
+  text-align: center;
+  width     : 100%;
+  padding   : 20px;
+}
+
+.redes-sociales h4 {
+
+  color         : var(--color-grisos);
+  text-transform: uppercase;
+  font-size     : 15px;
+  font-weight   : bold;
+}
+
+.iconos {
+  width: 100%;
+}
+
+.iconos a {
+  color    : var(--color-grisos);
+  font-size: 25px;
+  padding  : 5px;
+}
+
+.redes-sociales span a {
+  font-size: 16px;
+  color    : var(--color-grisos);
+}
+
+.copyright {
+  background-color: var(--color-grisos);
+  width           : 100%;
+
+}
+
+.copyright h4 {
+  font-size: 10px;
+  color    : var(--color-gris);
+  margin   : 0;
+
+}
+
+.carrusel {
+  margin : 30px;
+  padding: 0;
+  margin : 0;
 }
