--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -82,11 +82,19 @@ header nav ul li a {
   padding        : 5px 0;
 }
 
+
+
 .oferta li a {
   color         : var(--color-rojo);
   font-weight   : bold;
   text-transform: uppercase;
   padding       : 5px 0;
+  transition     : color .3s ease;
+}
+
+.oferta li a:hover {
+  color         : var(--color-grisos);
+  
 }
 
 
@@ -102,6 +110,7 @@ header nav ul li a {
 
 header nav ul li a:hover {
   text-decoration: none;
+  color: var(--color-rojo);
 }
 
 .container-logo {
@@ -157,6 +166,14 @@ header nav ul li a:hover {
 .p-container article a {
   color    : var(--color-rosa);
   font-size: 10px;
+  transition     : color .3s ease;
+  font-weight: bold;
+
+}
+
+.p-container article a:hover {
+  color: var(--color-grisos);
+  text-decoration: none;
 }
 
 .bordes-derechos {
@@ -309,19 +326,28 @@ header nav ul li a:hover {
 }
 
 .button-compra {
-  background    : var(--color-grisos);
-  width         : 100%;
+  color: white !important;
+  font-size: 14px;
   text-transform: uppercase;
-  font-size     : 14px;
-  font-weight   : 500;
-  margin-top    : 6px;
-  opacity       : 1;
-  color         : #fff;
-  border        : 0;
-  border-radius : 5px;
-  padding       : 10px;
-  margin-top    : 10px;
+  padding: 0.2em 1.2em;
+  background: rgb(0, 0, 0);
+  border: 2px solid;
+  border-color: var(--color-grisos);
+  transition: all 1s ease;
+  position: relative;
+  border-radius: 10px;
+}
 
+.button-compra:hover {
+  background: var(--color-gris);
+  color: var(--color-grisos) !important;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 10px;
+}
+
+.button-compra:active{
+	box-shadow:2px 2px 1px #000;
 }
 
 .caja-res {
@@ -412,8 +438,11 @@ header nav ul li a:hover {
   list-style     : none;
   padding        : 3px 0;
   font-size      : 13px;
+  transition     : color .3s ease;
 
 }
+
+
 
 ul {
   padding: 0;
