--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -438,15 +438,16 @@ header nav ul li a:hover {
 }
 
 .container-footer a {
-text-decoration: none;
-transition    : color .3s ease;
+  text-decoration: none;
+  transition     : color .3s ease;
 
 }
 
-.container-footer .tienda-online ul a li:hover, .container-footer .centro-de-ayuda ul a li:hover {
+.container-footer .tienda-online ul a li:hover,
+.container-footer .centro-de-ayuda ul a li:hover {
   color: var(--color-rosa);
-  
-  }
+
+}
 
 .tienda-online,
 .centro-de-ayuda {
@@ -517,7 +518,7 @@ ul {
   border    : none;
   color     : var(--color-grisos);
   margin    : 0 8px;
-  transition    : color .3s ease;
+  transition: color .3s ease;
 }
 
 .newsletter form button:hover {
@@ -543,21 +544,22 @@ ul {
 }
 
 .iconos a {
-  color    : var(--color-grisos);
-  font-size: 25px;
-  padding  : 5px;
-  transition    : color .3s ease;
+  color     : var(--color-grisos);
+  font-size : 25px;
+  padding   : 5px;
+  transition: color .3s ease;
 }
 
-.iconos a:hover, .redes-sociales span a:hover {
-  color:var(--color-rosa);
+.iconos a:hover,
+.redes-sociales span a:hover {
+  color          : var(--color-rosa);
   text-decoration: none;
 }
 
 .redes-sociales span a {
-  font-size: 16px;
-  color    : var(--color-grisos);
-  transition    : color .3s ease;
+  font-size : 16px;
+  color     : var(--color-grisos);
+  transition: color .3s ease;
 }
 
 .copyright {
@@ -596,7 +598,7 @@ ul {
 }
 
 @media (min-width: 768px) {
-
+/*===============HOME===================*/
   .navbar-expand-md .navbar-collapse {
     height: 50px;
     margin: 10px;
@@ -628,6 +630,7 @@ ul {
     margin-top: 180px;
     padding   : 0;
   }
+
 
 
 }
@@ -709,4 +712,291 @@ ul {
   .p-container article a {
     font-size: 13px;
   }
+}
+
+
+
+
+
+
+/*===============Css PRODUCT DETAILS ===================*/
+
+/*contenedor producto*/
+
+.caja-detailProduct {
+  background-color: var(--color-gris);
+  margin-top      : 140px;
+  box-shadow      : 0px 0px 5px rgb(0 0 0 / 60%);
+
+}
+
+/*------------------------------------------------*/
+
+/*img producto*/
+
+.caja-detailProduct img {
+  width     : 100%;
+  transition: all 1.9s ease;
+
+}
+
+.img-contenedor:hover img {
+  transform: scale(1.25);
+
+}
+
+/*------------------------------------------------*/
+
+/* titulo producto*/
+
+.title-product-detail {
+  margin: 20px 0;
+}
+
+.title-product-detail h4 {
+  color      : var(--color-grisos);
+  text-align : left;
+  font-weight: bold;
+  font-size  : 2rem;
+
+}
+
+/*------------------------------------------------*/
+
+/* precio anterior*/
+
+.tachado h4 {
+  color          : var(--color-grisos);
+  text-align     : left;
+  text-decoration: line-through;
+}
+
+/*------------------------------------------------*/
+
+/* precio nuevo*/
+.precio {
+  position: relative;
+  
+}
+
+.precio h2 {
+  color      : var(--color-rosa);
+  font-weight: bold;
+}
+
+/*------------------------------------------------*/
+
+/* descuento */
+
+.descuento-detail {
+  width          : 60px;
+  height         : 60px;
+  border-radius  : 50%;
+  background     : var(--color-rosa);
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  text-align     : center;
+  margin         : 0px auto;
+  padding        : 3%;
+  position       : absolute;
+  left           : 110px;
+  bottom         : -10px;
+}
+
+.descuento-detail span {
+  text-transform: uppercase;
+  font-weight   : bold;
+}
+
+/*------------------------------------------------*/
+
+/* medios de pago*/
+.medios-de-pago {
+  display: flex;
+  border-bottom: gray 2px solid;
+  border-top: gray 2px solid;
+margin-top: 25px;
+padding: 10px 0 0 5px;
+
+}
+
+.title-medios-de-pago, .title-tiempos-de-envio {
+  color: var(--color-grisos);
+  display: flex;
+  width: 50%;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0
+  
+}
+
+.title-medios-de-pago i, .title-tiempos-de-envio i {
+  font-size: 1.5rem;
+  color: var(--color-rosa);
+  
+}
+
+.title-medios-de-pago h4, .title-tiempos-de-envio h4 {
+  font-size: 0.8rem;
+  padding: 5px 0 0 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.title-medios-de-pago a p, .title-tiempos-de-envio a p {
+  font-size: 0.8rem;
+  text-decoration: none;
+  color: var(--color-rosa);
+  padding:  0 0 0 35px;
+
+}
+
+.iconos-medios-de-pago {
+  width: 50%;
+  color: var(--color-rosa);
+  margin: 0;
+  padding: 0 0 0 5px;
+  ;
+}
+
+.iconos-medios-de-pago i {
+font-size: 35px;
+padding: 2px;
+}
+
+/*------------------------------------------------*/
+
+/* tiempos de envio*/
+
+.tiempo-de-envio {
+  display: flex;
+  border-bottom: gray 2px solid;
+
+padding: 10px 0 0 5px;
+
+}
+
+
+
+
+/*------------------------------------------------*/
+
+/* selector de cantidad */
+
+.agregar-cantidad {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-bottom: gray 2px solid;
+}
+
+.selector-de-cantidad {
+    padding: 15px;
+}
+
+.number-input {
+  border : var(--color-rosa) 2px solid;
+  display: inline-flex;
+}
+
+.number-input,
+.number-input * {
+  box-sizing: border-box;
+}
+
+.number-input button {
+  outline           : none;
+  -webkit-appearance: none;
+  background-color  : transparent;
+  border            : none;
+  align-items       : center;
+  justify-content   : center;
+  width             : 3rem;
+  height            : 3rem;
+  cursor            : pointer;
+  margin            : 0;
+  position          : relative;
+}
+
+.number-input button:before,
+.number-input button:after {
+  display         : inline-block;
+  position        : absolute;
+  content         : '';
+  width           : 1rem;
+  height          : 2px;
+  background-color: var(--color-rosa);
+  transform       : translate(-50%, -50%);
+}
+
+.number-input button.plus:after {
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.number-input input[type=number] {
+  
+  max-width   : 5rem;
+  padding     : .5rem;
+  border      : var(--color-rosa) solid;
+  border-width: 0 2px;
+  font-size   : 2rem;
+  height      : 3rem;
+  font-weight : bold;
+  text-align  : center;
+  background-color: var(--color-rosa);
+  color: var(--color-gris);
+}
+
+
+/*------------------------------------------------*/
+
+/* button-de-compra */
+.button-confirma-producto {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 60px;
+  padding: 10px;
+}
+
+/*------------------------------------------------*/
+
+/* descripcion */
+
+.descripcion {
+  margin: 0;
+  padding: 20px;
+}
+
+/*------------------------------------------------*/
+
+/* tabla-especificaciones */
+.especificaciones, .contenedor-cata {
+padding: 20px;
+}
+
+.tabla-especificaciones, .cata-producto {
+  background-color: var(--color-grisos);
+  
+}
+
+.title-table {
+  text-transform: uppercase;
+  color: var(--color-rosa);
+  font-weight: bold;
+  
+}
+
+.contenido-table {
+  text-align: right;
+  
+}
+
+
+@media (min-width: 768px) {
+
+.caja-detailProduct {
+margin-top: 180px;
+}
 }
