Finalizado detailProduct responsive

--- a/site/views/detailProduct.ejs
+++ b/site/views/detailProduct.ejs
@@ -7,12 +7,13 @@
 		<!-- Header -->
 		<%- include('partials/header') %>
 			<!-- /Header -->
-<section class="vista-producto-detail">
-			<div class="container contenedor-detailProduct">
-				<div class="d-flex justify-content-around">
-					<div class="col-10 col-md-6 caja-detailProduct">
-
-						<img src="/images/producto1.png" alt="">
+>
+			<div class="container">
+				<div class="d-flex justify-content-around "> 
+					<div class="col-10 col-md-12 caja-detailProduct">
+<div class=" parte-img-producto">
+						<img src="/images/producto1.png" alt=""></div>
+						<div class=" parte-descripcion-producto">
 						<div class="title-product-detail">
 							<h4>Famiglia Bianchi Malbec</h4>
 						</div>
@@ -62,12 +63,12 @@
 						</div>
 						<div class="button-confirma-producto">
 							<button type="button" class="button-compra">Agregar al carrito</button>
-						</div>
+						</div></div>
 					</div>
 				</div>
 			</div>
 			</div>
-		</section>
+		
 
 
 
@@ -79,7 +80,7 @@
 								voluptates eligendi ipsum doloremque, ipsam, praesentium ab vitae ipsa sequi! Minus
 								eaque perspiciatis, asperiores blanditiis a reiciendis est numquam.</p>
 						</div>
-						<section class="especificaciones">
+						<section class="col-12 especificaciones">
 							<table class="table table-sm table-dark tabla-especificaciones">
 
 								<tbody>
@@ -118,7 +119,7 @@
 									</tr>
 								</tbody>
 							</table>
-
+						</section>
 						</section>
 
 					<section class="contenedor-cata">
