--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -598,7 +598,8 @@ ul {
 }
 
 @media (min-width: 768px) {
-/*===============HOME===================*/
+
+  /*===============HOME===================*/
   .navbar-expand-md .navbar-collapse {
     height: 50px;
     margin: 10px;
@@ -712,6 +713,9 @@ ul {
   .p-container article a {
     font-size: 13px;
   }
+
+
+
 }
 
 
@@ -725,7 +729,7 @@ ul {
 
 .caja-detailProduct {
   background-color: var(--color-gris);
-  margin-top      : 140px;
+  margin-top      : 116px;
   box-shadow      : 0px 0px 5px rgb(0 0 0 / 60%);
 
 }
@@ -776,7 +780,7 @@ ul {
 /* precio nuevo*/
 .precio {
   position: relative;
-  
+
 }
 
 .precio h2 {
@@ -813,56 +817,59 @@ ul {
 
 /* medios de pago*/
 .medios-de-pago {
-  display: flex;
+  display      : flex;
   border-bottom: gray 2px solid;
-  border-top: gray 2px solid;
-margin-top: 25px;
-padding: 10px 0 0 5px;
+  border-top   : gray 2px solid;
+  margin-top   : 25px;
+  padding      : 10px 0 0 5px;
 
 }
 
-.title-medios-de-pago, .title-tiempos-de-envio {
-  color: var(--color-grisos);
-  display: flex;
-  width: 50%;
+.title-medios-de-pago,
+.title-tiempos-de-envio {
+  color    : var(--color-grisos);
+  display  : flex;
+  width    : 50%;
   flex-wrap: wrap;
-  margin: 0;
-  padding: 0
-  
+  margin   : 0;
+  padding  : 0
 }
 
-.title-medios-de-pago i, .title-tiempos-de-envio i {
+.title-medios-de-pago i,
+.title-tiempos-de-envio i {
   font-size: 1.5rem;
-  color: var(--color-rosa);
-  
+  color    : var(--color-rosa);
+
 }
 
-.title-medios-de-pago h4, .title-tiempos-de-envio h4 {
-  font-size: 0.8rem;
-  padding: 5px 0 0 5px;
+.title-medios-de-pago h4,
+.title-tiempos-de-envio h4 {
+  font-size     : 0.8rem;
+  padding       : 5px 0 0 5px;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight   : bold;
 }
 
-.title-medios-de-pago a p, .title-tiempos-de-envio a p {
-  font-size: 0.8rem;
+.title-medios-de-pago a p,
+.title-tiempos-de-envio a p {
+  font-size      : 0.8rem;
   text-decoration: none;
-  color: var(--color-rosa);
-  padding:  0 0 0 35px;
+  color          : var(--color-rosa);
+  padding        : 0 0 0 35px;
 
 }
 
 .iconos-medios-de-pago {
-  width: 50%;
-  color: var(--color-rosa);
-  margin: 0;
+  width  : 50%;
+  color  : var(--color-rosa);
+  margin : 0;
   padding: 0 0 0 5px;
   ;
 }
 
 .iconos-medios-de-pago i {
-font-size: 35px;
-padding: 2px;
+  font-size: 35px;
+  padding  : 2px;
 }
 
 /*------------------------------------------------*/
@@ -870,10 +877,10 @@ padding: 2px;
 /* tiempos de envio*/
 
 .tiempo-de-envio {
-  display: flex;
+  display      : flex;
   border-bottom: gray 2px solid;
 
-padding: 10px 0 0 5px;
+  padding: 10px 0 0 5px;
 
 }
 
@@ -884,15 +891,26 @@ padding: 10px 0 0 5px;
 
 /* selector de cantidad */
 
+input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance   : textfield;
+  appearance        : textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
 .agregar-cantidad {
-  width: 100%;
-  display: flex;
+  width          : 100%;
+  display        : flex;
   justify-content: center;
-  border-bottom: gray 2px solid;
+  border-bottom  : gray 2px solid;
 }
 
 .selector-de-cantidad {
-    padding: 15px;
+  padding: 15px;
 }
 
 .number-input {
@@ -935,17 +953,17 @@ padding: 10px 0 0 5px;
 }
 
 .number-input input[type=number] {
-  
-  max-width   : 5rem;
-  padding     : .5rem;
-  border      : var(--color-rosa) solid;
-  border-width: 0 2px;
-  font-size   : 2rem;
-  height      : 3rem;
-  font-weight : bold;
-  text-align  : center;
+
+  max-width       : 5rem;
+  padding         : .5rem;
+  border          : var(--color-rosa) solid;
+  border-width    : 0 2px;
+  font-size       : 2rem;
+  height          : 3rem;
+  font-weight     : bold;
+  text-align      : center;
   background-color: var(--color-rosa);
-  color: var(--color-gris);
+  color           : var(--color-gris);
 }
 
 
@@ -953,11 +971,11 @@ padding: 10px 0 0 5px;
 
 /* button-de-compra */
 .button-confirma-producto {
-  width: 100%;
-  display: flex;
+  width          : 100%;
+  display        : flex;
   justify-content: center;
-  height: 60px;
-  padding: 10px;
+  height         : 60px;
+  padding        : 10px;
 }
 
 /*------------------------------------------------*/
@@ -965,38 +983,115 @@ padding: 10px 0 0 5px;
 /* descripcion */
 
 .descripcion {
-  margin: 0;
+  margin : 0;
   padding: 20px;
 }
 
 /*------------------------------------------------*/
 
 /* tabla-especificaciones */
-.especificaciones, .contenedor-cata {
-padding: 20px;
+.especificaciones,
+.contenedor-cata {
+  padding: 20px;
 }
 
-.tabla-especificaciones, .cata-producto {
+.tabla-especificaciones,
+.cata-producto {
   background-color: var(--color-grisos);
-  
+
 }
 
 .title-table {
   text-transform: uppercase;
-  color: var(--color-rosa);
-  font-weight: bold;
-  
+  color         : var(--color-rosa);
+  font-weight   : bold;
+
 }
 
 .contenido-table {
   text-align: right;
-  
+
 }
 
 
 @media (min-width: 768px) {
+  .contenedor-detailProduct {
+    display: flex;
+  }
 
-.caja-detailProduct {
-margin-top: 180px;
+
+
+  .caja-detailProduct {
+    margin   : 155px 0 0 0;
+    flex-wrap: wrap;
+    display  : flex;
+  }
+
+  .parte-img-producto {
+    display       : flex;
+    flex-direction: column;
+    width         : 50%;
+
+
+  }
+
+  .parte-descripcion-producto {
+    display       : flex;
+    flex-direction: column;
+    width         : 50%;
+  }
+
+}
+
+@media (min-width: 1024px) {
+  .title-product-detail h4 {
+    font-size: 3rem;
+  }
+
+  .precio h2 {
+    font-size: 3rem;
+  }
+
+  .descuento-detail {
+    width : 90px;
+    height: 90px;
+    left  : 150px;
+
+  }
+
+  .descuento-detail span {
+    font-size: 1.3rem;
+  }
+
+  .title-medios-de-pago i,
+.title-tiempos-de-envio i {
+  font-size: 2rem;
+}
+
+.title-medios-de-pago h4,
+.title-tiempos-de-envio h4 {
+font-size: 1rem;
+}
+.title-medios-de-pago a p,
+.title-tiempos-de-envio a p {
+  font-size: 1rem;
+  padding-left: 43px;
+  
+}
+
+.title-medios-de-pago a,
+.title-tiempos-de-envio a  {
+text-decoration: none;
+}
+
+.title-medios-de-pago a p:hover,
+.title-tiempos-de-envio a p:hover {
+  color     : var(--color-grisos);
+  transition: color .3s ease;
+}
+
+.button-confirma-producto {
+  height: 70px;
+  padding-top: 20px;
 }
 }
