--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/style-loginRegister.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>LOGIN</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/stylesheets/style-loginRegister.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <title>LOGIN</title>
 </head>
+
 <body>
   <div class="container">
-  <div class="d-flex justify-content-around">
-    <div class="col-10 container-login">
-    
-            <div class="title">
-              <h1> INGRESAR</h1>
-            </div>
-            <div class="login-description">
-            
-              Si ya estas registrado en Bodegas Eclipse, ingresa con tu correo electronico y contraseña.
-    
-            </div>
-            <form class="login" action="" method="POST">
-      
-                <input class="controls" type="email" name="email" id="email" placeholder="CORREO ELECTRONICO">
-                <input class="controls" type="password" name="email" id="password" placeholder="CONTRASEÑA">
-                <input type="submit" class="button" value="INGRESAR">
-             
+    <div class="d-flex justify-content-around">
+      <div class="col-10 container-login">
 
-            </form>
-        
-  <div class="link">
-    <a href="/views/register.ejs">¿Todavia no estas registrado?Registrate.</a>
+        <div class="title">
+          <h1> INGRESAR</h1>
+        </div>
+        <div class="login-description">
 
+          Si ya estas registrado en Bodegas Eclipse, ingresa con tu correo electronico y contraseña.
+
+        </div>
+        <form class="login" action="" method="POST">
+
+          <input class="controls" type="email" name="email" id="email" placeholder="CORREO ELECTRONICO">
+          <input class="controls" type="password" name="email" id="password" placeholder="CONTRASEÑA">
+          <input type="submit" class="button" value="INGRESAR">
+
+
+        </form>
+
+        <div class="link">
+          <a href="/register">¿Todavia no estas registrado?Registrate.</a>
+
+        </div>
+      </div>
+    </div>
   </div>
-    </div>
-     </div>
-    </div>
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+    integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
