--- a/site/views/carrito.ejs
+++ b/site/views/carrito.ejs
@@ -103,10 +103,12 @@
 
 
 
-  <body> <!--Inicio Carrito-->
+  <body> <!--Inicio Carrito-->    
+
     <div class="container" style=background-color:#d8cfd4>
-        <h1 style="margin-top:200px;" class="text-center">MI CARRITO</h1>
+        <h1 style="margin-top:200px; background-color: #575355;" class="text-center">MI CARRITO</h1>
         <table border="1" class="table table-hover table-bordered">
+
             <thead class="thead-dark"> <!--Encabezado-->
                 <tr>
                     <th>Producto</th>
@@ -115,99 +117,104 @@
                     <th></th>
                 </tr>
             </thead> <!--Fin Encabezado-->
-            <tbody>
-                <tr> <!--Agrego una fila Bressia del Alma-->                  
+
+            <tbody> <!--Comienzo items carrito-->
+                <tr> <!--Agrego fila Bressia del Alma-->                  
                     <td><img src='./images/01BressiadelAlma.jpg' class="img-fluid" style="width:100px; height: 100px;">Bressia del Alma</td>
                     <td><p class="item-price mb-0 carritoCartItemPrice">$8.400</p></td>
-                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number"
+                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number" min=1
                             value="1"></td>
                     <td><button class="btn btn-outline-dark buttonDelete" type="button">X</button></td>
                 </tr>
-                <tr> <!--Agrego una fila Chateau Monbousquet-->                  
+                <tr> <!--Agrego fila Chateau Monbousquet-->                  
                     <td><img src='./images/02ChateauMonbousquet.jpg' class="img-fluid" style="width:100px; height: 100px;">Chateau Monbousque</td>
                     <td><p class="item-price mb-0 carritoCartItemPrice">$55.000</p></td>
-                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number"
+                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number" min=1
                         value="1"></td>
                     <td><button class="btn btn-outline-dark buttonDelete" type="button">X</button></td>
                 </tr>
-                <tr> <!--Agrego una fila Bremare-->                  
+                <tr> <!--Agrego fila Bremare-->                  
                     <td><img src='./images/03Bremare.png' class="img-fluid" style="width:100px; height: 100px;">Bremare</td>
                     <td><p class="item-price mb-0 carritoCartItemPrice">$6.200</p></td>
-                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number"
+                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number" min=1
                         value="1"></td>
                     <td><button class="btn btn-outline-dark buttonDelete" type="button">X</button></td>
                 </tr>
-                <tr> <!--Agrego una fila Luigi Bosca-->                  
+                <tr> <!--Agrego fila Luigi Bosca-->                  
                     <td><img src='./images/04LuigiBosca.jpg' class="img-fluid" style="width:100px; height: 100px;">Luigi Bosca</td>
                     <td><p class="item-price mb-0 carritoCartItemPrice">$4.500</p></td>
-                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number"
+                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number" min=1
                         value="1"></td>
                     <td><button class="btn btn-outline-dark buttonDelete" type="button">X</button></td>
                 </tr>    
-                <tr> <!--Agrego una fila Lagarde Guarda-->                  
+                <tr> <!--Agrego fila Lagarde Guarda-->                  
                     <td><img src='./images/05LagardeGuarda.jpg' class="img-fluid" style="width:100px; height: 100px;">Lagarde Guarda</td>
                     <td><p class="item-price mb-0 carritoCartItemPrice">$8.200</p></td>
-                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number"
+                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number" min=1
                         value="1"></td>
                     <td><button class="btn btn-outline-dark buttonDelete" type="button">X</button></td>
                 </tr> 
-                <tr> <!--Agrego una fila Cordero Piel Lobo-->                  
+                <tr> <!--Agrego fila Cordero Piel Lobo-->                  
                     <td><img src='./images/06CorderoPiel Lobo.jpg' class="img-fluid" style="width:100px; height: 100px;">Cordero Piel Lobo</td>
                     <td><p class="item-price mb-0 carritoCartItemPrice">$1.800</p></td>
-                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number"
+                    <td><input class="carrito-cart-quantity-input carritoCartItemQuantity" type="number" min=1
                         value="1"></td>
                     <td><button class="btn btn-outline-dark buttonDelete" type="button">X</button></td>
                 </tr>                                            
-            </tbody>
+            </tbody> <!--Fin items Carrito-->
+
         </table>
-    </div> 
 
-  </div>            <!-- Fin Ejemplos -->
-                
-            
-            <!-- Fin items del carrito -->
-
-            <!-- Comienzo Total -->
-
-            <div class="row">
-                
-                <div class="col-12">
-
-                
-                    <div class="carrito-cart-total d-flex align-items-center">
+        <div class="row" style=background-color:#575355;  >
+          <div class="col-12" style="padding: 10px;" >                          
+              <div class="carrito-cart-total d-flex align-items-center"" >
+                  
+                  <div class="col-2">
+                      <div class="carrito-item d-flex align-items-center h-100 ">
+                          <a href=""></a><i class="fas fa-shuttle-van"></i> <button class="btn btn-light  ml-auto" type="button" data-toggle="modal"
+                          data-target="#comprarModal">Calcular Envío</button>
+                          
+                      </div>
+                  </div>
+                  
+                  
+                  <div class="col-2">
+                      <div class="carrito-item d-flex align-items-center h-100">
+                          <a href=""></a><i class="fas fa-gifts"></i> <button class="btn btn-light   ml-auto" type="button" data-toggle="modal"
+                          data-target="#comprarModal">GiftCards</button>
+                          
+                      </div>
+                  </div>
+    
+                  <div class="col-3">
+                    <div class="carrito-item d-flex align-items-center h-100">
+                        <a href=""></a><i class="fas fa-gifts"></i> <button class="btn btn-light   ml-auto" type="button" data-toggle="modal"
+                        data-target="#comprarModal">Voucher de descuento</button>
                         
-                        <div class="col-">
-                            <div class="carrito-cart-item d-flex align-items-center h-100 border-bottom pb-2 pt-3">
-                                <a href=""></a><i class="fas fa-shuttle-van"></i> <button class="btn btn-success ml-auto comprarButton" type="button" data-toggle="modal"
-                                data-target="#comprarModal">Calcular Envío</button>
-                                
-                            </div>
-                        </div>
-                        
-                        
-                        <div class="col-">
-                            <div class="carrito-cart-item d-flex align-items-center h-100 border-bottom pb-2 pt-3">
-                                <a href=""></a><i class="fas fa-gifts"></i> <button class="btn btn-success ml-auto comprarButton" type="button" data-toggle="modal"
-                                data-target="#comprarModal">Aplicar descuento</button>
-                                
-                            </div>
-                        </div>
-                        
-                        <p class="mb-0">Total</p> 
-                        <p class="ml-4 mb-0 carritoCartTotal">0$</p>
-                        <button class="btn btn-success ml-auto comprarButton" type="button" data-toggle="modal"
-                            data-target="#comprarModal">Finalizar Compra</button>
                     </div>
-                        
-                </div>
-           
-            </div>
-       
-            </div>
-        <!-- Fin Total -->
+                  </div>
+                  
+                  <p class="mb-0">Total:</p> 
+                  <p class="ml-4 mb-0 carritoTotal  border-bottom pb-2 pt-3">0$</p>
+    
+                  <button class="btn btn-light  ml-auto" type="button" data-toggle="modal"
+                      data-target="#comprarModal">Finalizar Compra</button> 
+              </div>
+            </div>   
+     
+      </div>
+    
+      </div>
         
+  <!-- Fin Total -->
+
+
     </section>
-    <!-- Fin Carrito de Compra -->
+    <!--Fin Carrito de compra-->
+   
+
+
+
 
     <footer>
 
